# E-commerce

./: .env.example  .flake8  .gitignore  README.md  db_dump.json  docker-compose.yml  pyproject.toml  req.txt  setup.cfg
.github/workflows/: format.yml
docs/source/: conf.py  index.rst
main/: settings.py  urls.py
shop/: admin.py  constans.py  forms.py
shop/api/: urls.py
shop/api/filters/: user.py
shop/api/jwt/: auth.py  serializers.py  views.py
shop/api/permissions/: base.py  user.py
shop/api/serializers/: basket.py  order.py  product.py  user.py
shop/api/tests/: __init__.py  base.py  test_auth.py  test_products.py
shop/api/views/: basket.py  order.py  product.py  user.py
shop/migrations/: 0001_initial.py  0002_storename_alter_sellerprofile_options_and_more.py  0003_alter_user_options_user_phone_and_more.py  0004_product_photo_user_photo_alter_product_owner.py  0005_brand_category_product_color_product_is_active_and_more.py  0006_discount_product_discount.py  0007_storename_logo.py  0008_order_delivery_date.py
shop/models/: __init__.py  basket.py  depricated.py  order.py  product.py  seller.py  user.py
shop/templates/admin/: dashboard.html
shop/templates/shop/: base.html  basket.html  create_shop.html  dashboard.html  orders.html  product_delete.html  product_detail.html  product_form.html  profile_edit.html
shop/templates/user/: base.html  home.html  login.html  product_detail_user.html  profile.html  register.html
shop/urls/: dashboard.py  user.py
shop/views/shop/: views.py
shop/views/user/: views.py
static/css/: styles.css
(+2 files in other folders)
